# Duke3D_Mod_Manager

./: .gitignore  .gitmodules  CMakeLists.txt  DOSBox Downloads.json  Duke Nukem 3D Favourite Mods.txt  Duke Nukem 3D Favourite Mods.xml  Duke Nukem 3D Game Downloads.json  Duke Nukem 3D Mod List.ini  Duke Nukem 3D Mod List.xml  Duke Nukem 3D Mod Manager.aps  Duke Nukem 3D Mod Manager.ini  Duke Nukem 3D Mod Manager.rc  Duke Nukem 3D Mod Manager.sln  Duke Nukem 3D Mod Manager.vcproj  Duke Nukem 3D Mod Manager.vcxproj  Duke Nukem 3D Mod Manager.vcxproj.filters  Favourites.txt  README.md
CMake/: Environment.cmake  ResourceFiles.cmake  SourceFiles.cmake  ThirdPartyLibraries.cmake
CMake/Environments/: Development.cmake  Production.cmake
CMake/Hunter/: HunterConfig.cmake
Data/: duke3d.bat  duke3d.conf  duke3d_client.conf  duke3d_server.conf  duke3d_setup.bat  duke3d_setup.conf
Data/DOSBox/: duke3d.conf.in  duke3d_client.conf.in  duke3d_server.conf.in
Lib/Debug/: QtCored4.lib
Lib/Release/: QtCore4.lib
Resources/Windows/: Resource.h  Resource.rc.in
Source/: Environment.h.in  Icon.h  Main.cpp  Project.h.in  Version.h.in
Source/Argument Collection/: ArgumentCase.cpp  ArgumentCase.h  ArgumentCollection.cpp  ArgumentCollection.h
Source/Arguments/: ArgumentCollection.cpp  ArgumentCollection.h  ArgumentParser.cpp  ArgumentParser.h
Source/Art/: Art.cpp  Art.h  Tile.cpp
Source/CLI/: CLIMain.cpp  ModManagerCLI.cpp  ModManagerCLI.h
Source/Configuration/: GameConfiguration.cpp  GameConfiguration.h  GameConfigurationEntry.cpp  GameConfigurationGenerator.cpp  GameConfigurationSection.cpp
Source/DOSBox/: DOSBoxDownload.cpp  DOSBoxDownload.h  DOSBoxDownloadCollection.cpp  DOSBoxDownloadCollection.h  DOSBoxDownloadFile.cpp  DOSBoxDownloadFile.h  DOSBoxDownloadVersion.cpp  DOSBoxDownloadVersion.h  DOSBoxManager.cpp  DOSBoxManager.h  DOSBoxVersion.cpp  DOSBoxVersion.h  DOSBoxVersionCollection.cpp  DOSBoxVersionCollection.h
Source/Download/: CachedFile.cpp  CachedFile.h  CachedPackageFile.cpp  CachedPackageFile.h  DownloadCache.cpp  DownloadCache.h  DownloadManager.cpp  DownloadManager.h
Source/File/: GameFile.cpp  GameFileFactoryRegistry.h
Source/GUI/: ConsolePanel.cpp  ConsolePanel.h  DOSBoxManagerPanel.cpp  DOSBoxManagerPanel.h  DOSBoxSettingsPanel.cpp  DOSBoxSettingsPanel.h  DOSBoxVersionPanel.cpp  DOSBoxVersionPanel.h  GameManagerPanel.cpp  GameManagerPanel.h  GameVersionPanel.cpp  GameVersionPanel.h  GroupEditorPanel.cpp  GroupEditorPanel.h  GroupPanel.cpp  GroupPanel.h  Hyperlink.cpp  Hyperlink.h  MetadataPanel.cpp  MetadataPanel.h  ModBrowserPanel.cpp  ModBrowserPanel.h  ModDownloadPanel.cpp  ModDownloadPanel.h  ModDownloadsPanel.cpp  ModDownloadsPanel.h  ModInfoPanel.cpp  ModInfoPanel.h  ModManagerApplication.cpp  ModManagerApplication.h  ModManagerFrame.cpp  ModManagerFrame.h  ModTeamMemberPanel.cpp  ModTeamMemberPanel.h  ModTeamMembersPanel.cpp  ModTeamMembersPanel.h  ProcessRunningDialog.cpp  ProcessRunningDialog.h  RelatedModsPanel.cpp  RelatedModsPanel.h  (+11 more)
Source/Game/: GameDownload.cpp  GameDownload.h  GameDownloadCollection.cpp  GameDownloadCollection.h  GameDownloadCollectionBroadcaster.cpp  GameDownloadCollectionBroadcaster.h  GameDownloadCollectionListener.cpp  GameDownloadCollectionListener.h  GameDownloadFile.cpp  GameDownloadFile.h  GameDownloadVersion.cpp  GameDownloadVersion.h  GameLocator.cpp  GameLocator.h  GameManager.cpp  GameManager.h  GameType.h  GameVersion.cpp  GameVersion.h  GameVersionCollection.cpp  GameVersionCollection.h  GameVersionCollectionBroadcaster.cpp  GameVersionCollectionBroadcaster.h  GameVersionCollectionListener.cpp  GameVersionCollectionListener.h  NoCDCracker.cpp  NoCDCracker.h
Source/Group/: Group.cpp  Group.h  GroupFile.cpp  GroupFile.h
Source/Manager/: InstalledModInfo.cpp  InstalledModInfo.h  ModManager.cpp  ModManager.h  ModManagerCLI.cpp  ModMatch.cpp  ModMatch.h  SettingsManager.cpp  SettingsManager.h
Source/Map/: BuildConstants.h  Map.cpp  Map.h  Partition.h  Sector.cpp  Sector.h  SectorItem.cpp  Sprite.h  TaggedItem.h  TexturedItem.cpp  TexturedItem.h  Velocity3D.cpp  Wall.cpp  Wall.h
Source/Mod Collection/: FavouriteModCollection.cpp  FavouriteModCollection.h  GameVersion.cpp  GameVersion.h  Mod.cpp  Mod.h  ModAuthorInformation.cpp  ModAuthorInformation.h  ModCollection.cpp  ModCollection.h  ModCollectionBroadcaster.cpp  ModCollectionBroadcaster.h  ModCollectionListener.h  ModDownload.cpp  ModDownload.h  ModFilterType.cpp  ModFilterType.h  ModGameVersion.cpp  ModSortType.h  (+22 more)
(+240 files in other folders)
